# OS_LABS

./: .gitignore  CMakeLists.txt  README.md
cp/: CMakeLists.txt  main.cpp
cp/doc/: report.docx
cp/include/: job_dag.hpp  job_exec.hpp
cp/src/: job_dag.cpp  job_exec.cpp
data/cp/ex1/: ex1.yaml
data/cp/ex2/: ex2.yaml
data/cp/ex3/: ex3.yaml
data/cp/ex4/: ex4.yaml
data/cp/ex5/: ex5.yaml
lab1/: CMakeLists.txt  child  lab1  main.c  main.cpp
lab1/doc/: report.docx
lab1/include/: parent.h  parent.hpp  utils.h  utils.hpp
lab1/src/: child.c  child.cpp  child1.cpp  child2.cpp  parent.c  parent.cpp  utils.c  utils.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/doc/: report.docx
lab2/include/: monte-carlo.hpp
lab2/src/: monte-carlo.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/doc/: report.docx
lab3/include/: utils.hpp
lab3/src/: child1.cpp  child2.cpp  parent.cpp
lab4/: CMakeLists.txt  dynamic_main.cpp  static_main.cpp
lab4/doc/: report.docx
lab4/include/: implementations.hpp  utils.hpp
lab4/src/: implementation1.cpp  implementation2.cpp  utils.cpp
lab567/: CMakeLists.txt
lab567/doc/: report.docx
lab567/include/: node_routine.hpp
lab567/src/: client.cpp  node_routine.cpp  server.cpp  socket_routine.cpp
lab8/doc/: report8.docx
tests/: CMakeLists.txt  cp_test.cpp  lab1_test  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test1.cpp  lab4_test2.cpp  lab567_test.cpp
